--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
   </section>
   <nav id="g_navi">	
     <ul>		
-      <li><a href="./home.html">ホーム</a></li>		
-      <li><a href="./ranking.html">ランキング</a></li>	
-      <li><a href="./item.html">カップ麺・袋麺一覧</a></li>		
-      <li><a href="./arengi.html">アレンジ</a></li>		
+      <li><a href="https://yuyu1018.github.io/yuyu1018.menmen/index.html">ホーム</a></li>		
+      <li><a href="https://yuyu1018.github.io/yuyu1018.menmen/ranking.html">ランキング</a></li>	
+      <li><a href="https://yuyu1018.github.io/yuyu1018.menmen/item.html">カップ麺・袋麺一覧</a></li>		
+      <li><a href="https://yuyu1018.github.io/yuyu1018.menmen/arengi.html">アレンジ</a></li>		
     </ul>
     </nav>     
 <!-- メニュー -->
