--- a/item.html
+++ b/item.html
@@ -26,10 +26,10 @@
   </section>
   <nav id="g_navi">	
     <ul>		
-      <li><a href="file:///C:/%E3%83%A9%E3%83%BC%E3%83%A1%E3%83%B3/home.html">ホーム</a></li>		
-      <li><a href="file:///C:/%E3%83%A9%E3%83%BC%E3%83%A1%E3%83%B3/ranking.html">ランキング</a></li>	
-      <li><a href="file:///C:/%E3%83%A9%E3%83%BC%E3%83%A1%E3%83%B3/item.html">カップ麺・袋麺一覧</a></li>		
-      <li><a href="file:///C:/%E3%83%A9%E3%83%BC%E3%83%A1%E3%83%B3/arengi.html">アレンジ</a></li>		
+      <li><a href="https://yuyu1018.github.io/yuyu1018.menmen/index.html">ホーム</a></li>		
+      <li><a href="https://yuyu1018.github.io/yuyu1018.menmen/ranking.html">ランキング</a></li>	
+      <li><a href="https://yuyu1018.github.io/yuyu1018.menmen/item.html">カップ麺・袋麺一覧</a></li>		
+      <li><a href="https://yuyu1018.github.io/yuyu1018.menmen/arengi.html">アレンジ</a></li>		
     </ul>
     </nav>     
 <!-- メニュー -->
