--- a/ranking.html
+++ b/ranking.html
@@ -26,7 +26,7 @@
   </section>
   <nav id="g_navi">	
     <ul>		
-      <li><a href="file:///C:/%E3%83%A9%E3%83%BC%E3%83%A1%E3%83%B3/home.html">ホーム</a></li>		
+      <li><a href="./index.html">ホーム</a></li>		
       <li><a href="./ranking.html">ランキング</a></li>	
       <li><a href="./item.html">カップ麺・袋麺一覧</a></li>		
       <li><a href="file:///C:/%E3%83%A9%E3%83%BC%E3%83%A1%E3%83%B3/arengi.html">アレンジ</a></li>		
