--- a/item.html
+++ b/item.html
@@ -313,9 +313,9 @@
 <div class="footer-contents">
   <footer class="footer">
     <div class="md-flex md-justify-between">
-      <a href="https://jajaaan.co.jp/" class="footer__logo">
-        <h3 class="footer-item">めんラボ</h3>
-      </a>
+      <a href="https://yuyu1018.github.io/yuyu1018.menmen/index.html" class="footer__logo">
+        <img class="title-img" src="./img/title.png" alt="about-img">
+    </a>
       <ul class="footer__navi flex">
         <li><a href="#">サイトマップ</a></li>
         <li><a href="#">プライバシーポリシー</a></li>
