--- a/ranking.html
+++ b/ranking.html
@@ -26,17 +26,10 @@
   </section>
   <nav id="g_navi">	
     <ul>		
-<<<<<<< HEAD
-      <li><a href="./index.html">ホーム</a></li>		
-      <li><a href="./ranking.html">ランキング</a></li>	
-      <li><a href="./item.html">カップ麺・袋麺一覧</a></li>		
-      <li><a href="file:///C:/%E3%83%A9%E3%83%BC%E3%83%A1%E3%83%B3/arengi.html">アレンジ</a></li>		
-=======
       <li><a href="https://yuyu1018.github.io/yuyu1018.menmen/index.html">ホーム</a></li>		
       <li><a href="https://yuyu1018.github.io/yuyu1018.menmen/ranking.html">ランキング</a></li>	
       <li><a href="https://yuyu1018.github.io/yuyu1018.menmen/item.html">カップ麺・袋麺一覧</a></li>		
       <li><a href="https://yuyu1018.github.io/yuyu1018.menmen/arengi.html">アレンジ</a></li>		
->>>>>>> cf48c97da8d1bf93ff1b4a26ea7d4e4e88949c8a
     </ul>
     </nav>     
 <!-- メニュー -->
@@ -648,9 +641,9 @@
     <div class="footer-contents">
       <footer class="footer">
         <div class="md-flex md-justify-between">
-          <a href="https://jajaaan.co.jp/" class="footer__logo">
-            <h3 class="footer-item">めんラボ</h3>
-          </a>
+          <a href="https://yuyu1018.github.io/yuyu1018.menmen/index.html" class="footer__logo">
+            <img class="title-img" src="./img/title.png" alt="about-img">
+            </a>
           <ul class="footer__navi flex">
             <li><a href="#">サイトマップ</a></li>
             <li><a href="#">プライバシーポリシー</a></li>
