--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=0.5,minimum-scale=0.5" />    <link rel="stylesheet" href="./css/home.css">
+    <meta name="viewport" content="width=device-width,initial-scale=0.3,minimum-scale=0.3" />    
+    <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./css/sanitize.css">
 
 </head>
