--- a/arengi.html
+++ b/arengi.html
@@ -98,12 +98,12 @@
     
       <div class="container">
         <div class="column">
-          <img class="image" src="./img/カレー.png" alt="画像1の説明">
+          <img class="image" src="https://dummyimage.com/500x300/000000/fff" alt="画像1の説明">
           <h3><a href="">アレンジレシピ</h3></a>
           <p>ここに文章やテキストを入力してください。</p>
         </div>
         <div class="column">
-          <img class="image" src="./img/カレー.png" alt="画像2の説明">
+          <img class="image" src="https://dummyimage.com/500x300/000000/fff" alt="画像2の説明">
           <h3><a href="">アレンジレシピ</h3></a>
           <p>ここに文章やテキストを入力してください。</p>
         </div>
@@ -111,25 +111,12 @@
       
       <div class="container">
         <div class="column">
-          <img class="image" src="./img/カレー.png" alt="画像1の説明">
+          <img class="image" src="https://dummyimage.com/500x300/000000/fff" alt="画像1の説明">
           <h3><a href="">アレンジレシピ</h3></a>
           <p>ここに文章やテキストを入力してください。</p>
         </div>
         <div class="column">
-          <img class="image" src="./img/カレー.png" alt="画像2の説明">
-          <h3><a href="">アレンジレシピ</h3></a>
-          <p>ここに文章やテキストを入力してください。</p>
-        </div>
-      </div>
-
-      <div class="container">
-        <div class="column">
-          <img class="image" src="./img/カレー.png" alt="画像1の説明">
-          <h3><a href="">アレンジレシピ</h3></a>
-          <p>ここに文章やテキストを入力してください。</p>
-        </div>
-        <div class="column">
-          <img class="image" src="./img/カレー.png" alt="画像2の説明">
+          <img class="image" src="https://dummyimage.com/500x300/000000/fff" alt="画像2の説明">
           <h3><a href="">アレンジレシピ</h3></a>
           <p>ここに文章やテキストを入力してください。</p>
         </div>
@@ -137,12 +124,25 @@
 
       <div class="container">
         <div class="column">
-          <img class="image" src="./img/カレー.png" alt="画像1の説明">
+          <img class="image" src="https://dummyimage.com/500x300/000000/fff" alt="画像1の説明">
           <h3><a href="">アレンジレシピ</h3></a>
           <p>ここに文章やテキストを入力してください。</p>
         </div>
         <div class="column">
-          <img class="image" src="./img/カレー.png" alt="画像2の説明">
+          <img class="image" src="https://dummyimage.com/500x300/000000/fff" alt="画像2の説明">
+          <h3><a href="">アレンジレシピ</h3></a>
+          <p>ここに文章やテキストを入力してください。</p>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="column">
+          <img class="image" src="https://dummyimage.com/500x300/000000/fff" alt="画像1の説明">
+          <h3><a href="">アレンジレシピ</h3></a>
+          <p>ここに文章やテキストを入力してください。</p>
+        </div>
+        <div class="column">
+          <img class="image" src="https://dummyimage.com/500x300/000000/fff" alt="画像2の説明">
           <h3><a href="">アレンジレシピ</h3></a>
           <p>ここに文章やテキストを入力してください。</p>
         </div>
