--- a/index.html
+++ b/index.html
@@ -61,56 +61,56 @@
    <article class="news" data-date="2023-4-10"></article>
     <h3>記事タイトル</h3>
     <p><a href="article1.html">2023年4月10日</a></p>
-      <a href="article1.html"><img src="image.jpg" alt="記事イメージ"></a>
+      <a href="article1.html"><img src="https://dummyimage.com/400x200/000000/fff" alt="記事イメージ"></a>
       <p><a href="article1.html">記事の説明文がここに入ります。</a></p>
   </article>
   
    <article class="news" data-date="2023-4-09"></article>
     <h3>記事タイトル</h3>
     <p><a href="article1.html">2023年4月10日</a></p>
-    <a href="article1.html"><img src="image.jpg" alt="記事イメージ"></a>
+    <a href="article1.html"><img src="https://dummyimage.com/400x200/000000/fff" alt="記事イメージ"></a>
     <p><a href="article1.html">記事の説明文がここに入ります。記事の説明文がここに入ります。記事の説明文がここに入ります。</a></p>
   </article>
 
    <article class="news" data-date="2022-12-31"></article>
     <h3>記事タイトル</h3>
     <p><a href="article1.html">2023年4月10日</a></p>
-      <a href="article1.html"><img src="image.jpg" alt="記事イメージ"></a>
+      <a href="article1.html"><img src="https://dummyimage.com/400x200/000000/fff" alt="記事イメージ"></a>
       <p><a href="article1.html">記事の説明文がここに入ります。記事の説明文がここに入ります。記事の説明文がここに入ります。</a></p>
   </article>
 
    <article class="news" data-date="2022-12-31"></article>
     <h3>記事タイトル</h3>
     <p><a href="article1.html">2023年4月10日</a></p>
-    <a href="article1.html"><img src="image.jpg" alt="記事イメージ"></a>
+    <a href="article1.html"><img src="https://dummyimage.com/400x200/000000/fff" alt="記事イメージ"></a>
     <p><a href="article1.html">記事の説明文がここに入ります。記事の説明文がここに入ります。</a></p>
   </article>
 
   <article class="news" data-date="2022-12-31">
     <h3>記事タイトル</h3>
     <p><a href="article4.html">2022年12月31日</a></p>
-    <a href="article4.html"><img src="image4.jpg" alt="記事イメージ4"></a>
+    <a href="article4.html"><img src="https://dummyimage.com/400x200/000000/fff" alt="記事イメージ4"></a>
     <p><a href="article4.html">記事の説明文がここに入ります。</a></p>
   </article>
   
   <article class="news" data-date="2022-12-30">
     <h3>記事タイトル</h3>
     <p><a href="article5.html">2022年12月30日</a></p>
-    <a href="article5.html"><img src="image5.jpg" alt="記事イメージ5"></a>
+    <a href="article5.html"><img src="https://dummyimage.com/400x200/000000/fff" alt="記事イメージ5"></a>
     <p><a href="article5.html">記事の説明文がここに入ります。</a></p>
   </article>
   
   <article class="news" data-date="2022-11-15">
     <h3>記事タイトル</h3>
     <p><a href="article6.html">2022年11月15日</a></p>
-    <a href="article6.html"><img src="image6.jpg" alt="記事イメージ6"></a>
+    <a href="article6.html"><img src="https://dummyimage.com/400x200/000000/fff" alt="記事イメージ6"></a>
     <p><a href="article6.html">記事の説明文がここに入ります。</a></p>
   </article>
   
   <article class="news" data-date="2022-10-01">
     <h3>記事タイトル</h3>
     <p><a href="article7.html">2022年10月1日</a></p>
-    <a href="article7.html"><img src="image7.jpg" alt="記事イメージ7"></a>
+    <a href="article7.html"><img src="https://dummyimage.com/400x200/000000/fff" alt="記事イメージ7"></a>
     <p><a href="article7.html">記事の説明文がここに入ります。</a></p>
   </article>
   
