--- a/item.html
+++ b/item.html
@@ -105,19 +105,19 @@
         <td class="noodle">
           <div class="noodle-item">
             <img class="noodle-img" src="./img/しょうゆ.png" alt="カップ麺1">
-            <div class="noodle-name">カップ麺1</div>
+            <a href=""><div class="noodle-name">カップ麺1</div></a>
             <div class="noodle-price">¥300</div>
             <div class="noodle-desc">このカップ麺は美味しいです。</div>
           </div>
           <div class="noodle-item">
             <img class="noodle-img" src="./img/しふど.png" alt="カップ麺2">
-            <div class="noodle-name">カップ麺2</div>
+            <a href=""><div class="noodle-name">カップ麺2</div></a>
             <div class="noodle-price">¥400</div>
             <div class="noodle-desc">このカップ麺は辛いです。</div>
           </div>
           <div class="noodle-item">
             <img class="noodle-img" src="./img/カレー.png" alt="カップ麺3">
-            <div class="noodle-name">カップ麺3</div>
+            <a href=""><div class="noodle-name">カップ麺3</div></a>
             <div class="noodle-price">¥350</div>
             <div class="noodle-desc">このカップ麺は野菜がたっぷり入っています。</div>
           </div>
@@ -125,181 +125,181 @@
       
           <div class="noodle-item">
             <img class="noodle-img" src="./img/しょうゆ.png" alt="カップ麺1">
-            <div class="noodle-name">カップ麺1</div>
+            <a href=""><div class="noodle-name">カップ麺1</div></a>
             <div class="noodle-price">¥300</div>
             <div class="noodle-desc">このカップ麺は美味しいです。</div>
           </div>
           <div class="noodle-item">
             <img class="noodle-img" src="./img/しふど.png" alt="カップ麺2">
-            <div class="noodle-name">カップ麺2</div>
+            <a href=""><div class="noodle-name">カップ麺2</div></a>
             <div class="noodle-price">¥400</div>
             <div class="noodle-desc">このカップ麺は辛いです。</div>
           </div>
           <div class="noodle-item">
             <img class="noodle-img" src="./img/カレー.png" alt="カップ麺3">
-            <div class="noodle-name">カップ麺3</div>
+            <a href=""><div class="noodle-name">カップ麺3</div></a>
             <div class="noodle-price">¥350</div>
             <div class="noodle-desc">このカップ麺は野菜がたっぷり入っています。</div>
           </div>
           <div class="noodle-item">
             <img class="noodle-img" src="./img/しょうゆ.png" alt="カップ麺1">
-            <div class="noodle-name">カップ麺1</div>
+            <a href=""><div class="noodle-name">カップ麺1</div></a>
             <div class="noodle-price">¥300</div>
             <div class="noodle-desc">このカップ麺は美味しいです。</div>
           </div>
           <div class="noodle-item">
             <img class="noodle-img" src="./img/しふど.png" alt="カップ麺2">
-            <div class="noodle-name">カップ麺2</div>
+            <a href=""><div class="noodle-name">カップ麺2</div></a>
             <div class="noodle-price">¥400</div>
             <div class="noodle-desc">このカップ麺は辛いです。</div>
           </div>
           <div class="noodle-item">
             <img class="noodle-img" src="./img/カレー.png" alt="カップ麺3">
-            <div class="noodle-name">カップ麺3</div>
+            <a href=""><div class="noodle-name">カップ麺3</div></a>
             <div class="noodle-price">¥350</div>
             <div class="noodle-desc">このカップ麺は野菜がたっぷり入っています。</div>
           </div>
           <div class="noodle-item">
             <img class="noodle-img" src="./img/しょうゆ.png" alt="カップ麺1">
-            <div class="noodle-name">カップ麺1</div>
+            <a href=""><div class="noodle-name">カップ麺1</div></a>
             <div class="noodle-price">¥300</div>
             <div class="noodle-desc">このカップ麺は美味しいです。</div>
           </div>
           <div class="noodle-item">
             <img class="noodle-img" src="./img/しふど.png" alt="カップ麺2">
-            <div class="noodle-name">カップ麺2</div>
+            <a href=""><div class="noodle-name">カップ麺2</div></a>
             <div class="noodle-price">¥400</div>
             <div class="noodle-desc">このカップ麺は辛いです。</div>
           </div>
           <div class="noodle-item">
             <img class="noodle-img" src="./img/カレー.png" alt="カップ麺3">
-            <div class="noodle-name">カップ麺3</div>
+            <a href=""><div class="noodle-name">カップ麺3</div></a>
             <div class="noodle-price">¥350</div>
             <div class="noodle-desc">このカップ麺は野菜がたっぷり入っています。</div>
           </div>
           <div class="noodle-item">
             <img class="noodle-img" src="./img/しょうゆ.png" alt="カップ麺1">
-            <div class="noodle-name">カップ麺1</div>
+            <a href=""><div class="noodle-name">カップ麺1</div></a>
             <div class="noodle-price">¥300</div>
             <div class="noodle-desc">このカップ麺は美味しいです。</div>
           </div>
           <div class="noodle-item">
             <img class="noodle-img" src="./img/しふど.png" alt="カップ麺2">
-            <div class="noodle-name">カップ麺2</div>
+            <a href=""><div class="noodle-name">カップ麺2</div></a>
             <div class="noodle-price">¥400</div>
             <div class="noodle-desc">このカップ麺は辛いです。</div>
           </div>
           <div class="noodle-item">
             <img class="noodle-img" src="./img/カレー.png" alt="カップ麺3">
-            <div class="noodle-name">カップ麺3</div>
+            <a href=""><div class="noodle-name">カップ麺3</div></a>
             <div class="noodle-price">¥350</div>
             <div class="noodle-desc">このカップ麺は野菜がたっぷり入っています。</div>
           </div>
           <div class="noodle-item">
             <img class="noodle-img" src="./img/しょうゆ.png" alt="カップ麺1">
-            <div class="noodle-name">カップ麺1</div>
+            <a href=""><div class="noodle-name">カップ麺1</div></a>
             <div class="noodle-price">¥300</div>
             <div class="noodle-desc">このカップ麺は美味しいです。</div>
           </div>
           <div class="noodle-item">
             <img class="noodle-img" src="./img/しふど.png" alt="カップ麺2">
-            <div class="noodle-name">カップ麺2</div>
+            <a href=""><div class="noodle-name">カップ麺2</div></a>
             <div class="noodle-price">¥400</div>
             <div class="noodle-desc">このカップ麺は辛いです。</div>
           </div>
           <div class="noodle-item">
             <img class="noodle-img" src="./img/カレー.png" alt="カップ麺3">
-            <div class="noodle-name">カップ麺3</div>
+            <a href=""><div class="noodle-name">カップ麺3</div></a>
             <div class="noodle-price">¥350</div>
             <div class="noodle-desc">このカップ麺は野菜がたっぷり入っています。</div>
           </div>
           <div class="noodle-item">
             <img class="noodle-img" src="./img/しょうゆ.png" alt="カップ麺1">
-            <div class="noodle-name">カップ麺1</div>
+            <a href=""><div class="noodle-name">カップ麺1</div></a>
             <div class="noodle-price">¥300</div>
             <div class="noodle-desc">このカップ麺は美味しいです。</div>
           </div>
           <div class="noodle-item">
             <img class="noodle-img" src="./img/しふど.png" alt="カップ麺2">
-            <div class="noodle-name">カップ麺2</div>
+            <a href=""><div class="noodle-name">カップ麺2</div></a>
             <div class="noodle-price">¥400</div>
             <div class="noodle-desc">このカップ麺は辛いです。</div>
           </div>
           <div class="noodle-item">
             <img class="noodle-img" src="./img/カレー.png" alt="カップ麺3">
-            <div class="noodle-name">カップ麺3</div>
+            <a href=""><div class="noodle-name">カップ麺3</div></a>
             <div class="noodle-price">¥350</div>
             <div class="noodle-desc">このカップ麺は野菜がたっぷり入っています。</div>
           </div>
           <div class="noodle-item">
             <img class="noodle-img" src="./img/しょうゆ.png" alt="カップ麺1">
-            <div class="noodle-name">カップ麺1</div>
+            <a href=""><div class="noodle-name">カップ麺1</div></a>
             <div class="noodle-price">¥300</div>
             <div class="noodle-desc">このカップ麺は美味しいです。</div>
           </div>
           <div class="noodle-item">
             <img class="noodle-img" src="./img/しふど.png" alt="カップ麺2">
-            <div class="noodle-name">カップ麺2</div>
+            <a href=""><div class="noodle-name">カップ麺2</div></a>
             <div class="noodle-price">¥400</div>
             <div class="noodle-desc">このカップ麺は辛いです。</div>
           </div>
           <div class="noodle-item">
             <img class="noodle-img" src="./img/カレー.png" alt="カップ麺3">
-            <div class="noodle-name">カップ麺3</div>
+            <a href=""><div class="noodle-name">カップ麺3</div></a>
             <div class="noodle-price">¥350</div>
             <div class="noodle-desc">このカップ麺は野菜がたっぷり入っています。</div>
           </div>
           <div class="noodle-item">
             <img class="noodle-img" src="./img/しょうゆ.png" alt="カップ麺1">
-            <div class="noodle-name">カップ麺1</div>
+            <a href=""><div class="noodle-name">カップ麺1</div></a>
             <div class="noodle-price">¥300</div>
             <div class="noodle-desc">このカップ麺は美味しいです。</div>
           </div>
           <div class="noodle-item">
             <img class="noodle-img" src="./img/しふど.png" alt="カップ麺2">
-            <div class="noodle-name">カップ麺2</div>
+            <a href=""><div class="noodle-name">カップ麺2</div></a>
             <div class="noodle-price">¥400</div>
             <div class="noodle-desc">このカップ麺は辛いです。</div>
           </div>
           <div class="noodle-item">
             <img class="noodle-img" src="./img/カレー.png" alt="カップ麺3">
-            <div class="noodle-name">カップ麺3</div>
+            <a href=""><div class="noodle-name">カップ麺3</div></a>
             <div class="noodle-price">¥350</div>
             <div class="noodle-desc">このカップ麺は野菜がたっぷり入っています。</div>
           </div>
           <div class="noodle-item">
             <img class="noodle-img" src="./img/しょうゆ.png" alt="カップ麺1">
-            <div class="noodle-name">カップ麺1</div>
+            <a href=""><div class="noodle-name">カップ麺1</div></a>
             <div class="noodle-price">¥300</div>
             <div class="noodle-desc">このカップ麺は美味しいです。</div>
           </div>
           <div class="noodle-item">
             <img class="noodle-img" src="./img/しふど.png" alt="カップ麺2">
-            <div class="noodle-name">カップ麺2</div>
+            <a href=""><div class="noodle-name">カップ麺2</div></a>
             <div class="noodle-price">¥400</div>
             <div class="noodle-desc">このカップ麺は辛いです。</div>
           </div>
           <div class="noodle-item">
             <img class="noodle-img" src="./img/カレー.png" alt="カップ麺3">
-            <div class="noodle-name">カップ麺3</div>
+            <a href=""><div class="noodle-name">カップ麺3</div></a>
             <div class="noodle-price">¥350</div>
             <div class="noodle-desc">このカップ麺は野菜がたっぷり入っています。</div>
           </div>
           <div class="noodle-item">
             <img class="noodle-img" src="./img/しょうゆ.png" alt="カップ麺1">
-            <div class="noodle-name">カップ麺1</div>
+            <a href=""><div class="noodle-name">カップ麺1</div></a>
             <div class="noodle-price">¥300</div>
             <div class="noodle-desc">このカップ麺は美味しいです。</div>
           </div>
           <div class="noodle-item">
             <img class="noodle-img" src="./img/しふど.png" alt="カップ麺2">
-            <div class="noodle-name">カップ麺2</div>
+            <a href=""><div class="noodle-name">カップ麺2</div></a>
             <div class="noodle-price">¥400</div>
             <div class="noodle-desc">このカップ麺は辛いです。</div>
           </div>
           <div class="noodle-item">
             <img class="noodle-img" src="./img/カレー.png" alt="カップ麺3">
-            <div class="noodle-name">カップ麺3</div>
+            <a href=""><div class="noodle-name">カップ麺3</div></a>
             <div class="noodle-price">¥350</div>
             <div class="noodle-desc">このカップ麺は野菜がたっぷり入っています。</div>
           </div>
