--- a/ranking.html
+++ b/ranking.html
@@ -69,10 +69,10 @@
   </div>
 
  <section class="ranking-item">
-<h3>1位:　ああああああああああああ</h3>
+<h3>1位: カップヌードル</h3>
 <img src="./img/しょうゆ.png" alt="しょうゆ">
-<p>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+<p>世界初のカップ麺。つるみのあるしなやかな麺に、おなじみのペッパーのきいたオリジナル
+  スープ。グ材は味付豚ミンチ、ミンチポーク、エビ、卵、ねぎ。
 </p>
 
 
@@ -106,10 +106,11 @@
   
 
 <section class="ranking-item">
-  <h3>2位:　ああああああああああああ</h3>
-  <img src="./img/しょうゆ.png" alt="しょうゆ">
-  <p>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+  <h3>2位: カップヌードル シーフード</h3>
+  <img src="./img/しふど.png" alt="しょうゆ">
+  <p>魚介のうまみを濃縮したシーフードスープ。つるみのあるしなやかな
+    麺にポークベースに魚介や野菜のうまみを濃縮したスープ。具材はほぼ
+    イカ、イカ、かにかま風味かまぼこ、卵、キャベツ、ねぎ。
   </p>
   <button class="review-button">口コミを投稿する</button>
 
@@ -138,10 +139,12 @@
   </section>
 
   <section class="ranking-item">
-    <h3>3位:　ああああああああああああ</h3>
-    <img src="./img/しょうゆ.png" alt="しょうゆ">
-    <p>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-      aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+    <h3>3位: カップヌードル カレー</h3>
+    <img src="./img/カレー.png" alt="しょうゆ">
+    <p>ポークや野菜のうまみと乳製品のまろやかカレー
+      つるみのある少し太めのしなやかな麺にポークや野菜のうまみと
+      乳製品でまろやかに仕上げたスープ。具材にポテト、味付豚ミンチ
+      ミンチポーク、にんじん、ねぎ。
     </p>
     
     <button class="review-button">口コミを投稿する</button>
@@ -303,7 +306,7 @@
     </div>
 
     <section class="ranking-item">
-<h3>1位:　ああああああああああああ</h3>
+<h3>1位: 赤いきつねうどん</h3>
 <img src="./img/しょうゆ.png" alt="しょうゆ">
 <p>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
   aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
@@ -339,8 +342,8 @@
 </section>
 
 <section class="ranking-item">
-  <h3>2位:　ああああああああああああ</h3>
-  <img src="./img/しょうゆ.png" alt="しょうゆ">
+  <h3>2位: どん兵衛 きつねうどん</h3>
+  <img src="https://cdn.shopify.com/s/files/1/0597/9992/8884/products/image_f7e165a7-82c8-4560-8b92-e9c8763dd23d_700x.png?v=1661608853" alt="しょうゆ">
   <p>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
     aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
   </p>
@@ -371,7 +374,7 @@
   </section>
 
   <section class="ranking-item">
-    <h3>3位:　ああああああああああああ</h3>
+    <h3>3位: どん兵衛 肉うどん</h3>
     <img src="./img/しょうゆ.png" alt="しょうゆ">
     <p>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
       aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
@@ -420,7 +423,7 @@
     </div>
 
     <section class="ranking-item">
-<h3>1位:　ああああああああああああ</h3>
+<h3>1位: 緑のたぬき 天そば</h3>
 <img src="./img/しょうゆ.png" alt="しょうゆ">
 <p>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
   aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
@@ -456,7 +459,7 @@
 </section>
 
 <section class="ranking-item">
-  <h3>2位:　ああああああああああああ</h3>
+  <h3>2位: お蕎麦屋さんの鴨だしそば</h3>
   <img src="./img/しょうゆ.png" alt="しょうゆ">
   <p>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
     aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
@@ -488,7 +491,7 @@
   </section>
 
   <section class="ranking-item">
-    <h3>3位:　ああああああああああああ</h3>
+    <h3>3位: どん兵衛 天ぷらそば</h3>
     <img src="./img/しょうゆ.png" alt="しょうゆ">
     <p>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
       aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
@@ -536,7 +539,7 @@
     </div>
 
     <section class="ranking-item">
-<h3>1位:　ああああああああああああ</h3>
+<h3>1位: ペヤングソース焼きそば</h3>
 <img src="./img/しょうゆ.png" alt="しょうゆ">
 <p>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
   aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
@@ -572,7 +575,7 @@
 </section>
 
 <section class="ranking-item">
-  <h3>2位:　ああああああああああああ</h3>
+  <h3>2位: 日清焼きそばUFO</h3>
   <img src="./img/しょうゆ.png" alt="しょうゆ">
   <p>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
     aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
@@ -604,7 +607,7 @@
   </section>
 
   <section class="ranking-item">
-    <h3>3位:　ああああああああああああ</h3>
+    <h3>3位: 一平ちゃん 夜店の焼きそば</h3>
     <img src="./img/しょうゆ.png" alt="しょうゆ">
     <p>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
       aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
