--- a/ranking.html
+++ b/ranking.html
@@ -38,7 +38,7 @@
 <div id="Ranking" class="app">
 <h3>インスタント麺最強まとめサイト</h3>
 <p>インスタント麺に関する情報をまとめたサイトです。このサイトではインスタント麺の種類や味などを細かく設定し、検索することができます。また、ユーザーが口コミを投稿することもできます。投稿された口コミは、他のユーザーが参考にできるように掲載されます。
-   このサイトは、インスタント麺に興味がある人や、新しいインスタント麺を探している人にとって役立つ情報を提供することを目的としています。</p>
+   このサイトは、インスタント麺に興味がある人や、新しいインスタント麺を探している人にとって役立つ情報を提供することを目的としてます。</p>
 
    <table border="1">
     <td colspan="5">目次</td>
