--- a/index.html
+++ b/index.html
@@ -245,45 +245,11 @@
       </div>
       <hr />
       <p class="copyright">
-        © 2023 <a href="https://jajaaan.co.jp/">めんラボ Inc.</a> All Rights Reserved.
+        © 2023 <a href="https://yuyu1018.github.io/yuyu1018.menmen/index.html">めんラボ Inc.</a> All Rights Reserved.
       </p>
     </footer>
     
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
